guess_branch + minor changes
Merge of branch 2022.09.guess_branch

- transformation guess_branch
- fixed cleanup in guess
- occurrences in error messages in guess
- mode proba_zero to forbid elimination of collisions (used by guess and
  guess_branch)
- WG example with all 4 compromise scenarios in one file, using guess_branch

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,8 @@ Version
   injectivity and leaving a non-injective query to prove.		 
 - New setting "set maxGuess = <size>." to limit the size of guessable
   values.
+- New command "guess_branch" to guess which branch of a test (if, find, let)
+  is taken at a certain program point.
 - Improved modelling of Diffie-Hellman in the standard library of primitives:
    - DH_proba_collision and square_DH_proba_collision no longer include
      DH_basic
