--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -3010,6 +3010,20 @@ This transformation does not apply to $\texttt{equivalence}$
 and $\texttt{query\_equiv}$ proofs. The transformation fails
 if such a proof is still required.
 
+\item $\texttt{guess\_branch }occ$ guesses which branch is taken at
+  program point $occ$. The instruction at program point $occ$ must be
+  a test (\texttt{if}, \texttt{let}, or \texttt{find}) with at least two
+  branches. This instruction must be executed at most once (either because
+  it is not under replication, and because it is under replication and the
+  replication indices are fixed, for instance because they have previously
+  been guessed by the \texttt{guess} instruction above).
+  If this instruction has $n$ branches, CryptoVerif generates $n$ games $G_i$ ($0 \leq i < n$) in which branch $i$ is kept and all other branches are replaced with an event \texttt{bad\_guess}. (Branch 0 is the \texttt{else} branch.) The desired queries must then be proved in all games $G_i$ and the probability of breaking the queries in the initial game is bounded by the sum of the probabililities of breaking them in all games $G_i$.
+  That allows the user to split cases depending on which branch is taken at program point $occ$.
+
+  The user first needs to prove the queries in game $G_0$. Once all queries are proved in this game, CryptoVerif automatically goes back and asks the user to prove the queries in next game, until they are proved in all games $G_i$.
+
+  In case the user is unable to prove some queries in a game $G_i$, it is blocked: it cannot consider the following games. In that case, the best is probably to remove the queries that cannot be proved and restart the proof. One can also undo the transformations until before \texttt{guess\_branch}, use \texttt{focus} to limit oneself to the queries that can be proved and redo the proof from \texttt{guess\_branch}.
+
 \item \texttt{start\_from\_other\_end}: for proofs of indistinguishability
   only (\texttt{equivalence}), instruct CryptoVerif to start transforming
   from the other game. When your input file contains
