--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,9 @@ Version
   values.
 - New command "guess_branch" to guess which branch of a test (if, find, let)
   is taken at a certain program point.
+- New probability formula #(O foreach a) (number of calls to oracle O
+  for value of a, where a can be random variable or a sequence of replication
+  indices).
 - Improved modelling of Diffie-Hellman in the standard library of primitives:
    - DH_proba_collision and square_DH_proba_collision no longer include
      DH_basic
@@ -30,6 +33,7 @@ Version
   collision statements.
 - Allow nested comments in the input file. All comments must be closed.
   CryptoVerif will raise an error otherwise.
+- Fixed probability for OW_trapdoor_perm_RSR.
 - Fixed internal error due to a forgotten game before focus command.
 - Fixed internal error LetEqual terms should have a variable in the left-hand side
 - Fixed bugs in crypto transformation (in particular, check that variables are
