common events in both sequences of games in indistinguishability proofs
Merge of branch 2022.12.int_ctxt_corrupt

- allow common events introduced by insert_event or insert in both
sequences of games in indistinguishability proofs.
- proofs of int_ctxt_corrupt from int_ctxt
- optimized number of exponentiations in the adversary time for CDH-RSR
- nice ideas in TODO

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,8 @@ Version
 - New probability formula #(O foreach a) (number of calls to oracle O
   for value of a, where a can be random variable or a sequence of replication
   indices).
+- Allow common events introduced by insert_event or insert in both sequences
+  of games of an indistinguishability proof.
 - Improved modelling of Diffie-Hellman in the standard library of primitives:
    - DH_proba_collision and square_DH_proba_collision no longer include
      DH_basic
