--- a/CHANGES
+++ b/CHANGES
@@ -40,6 +40,7 @@ Version
 - Fixed probability for OW_trapdoor_perm_RSR.
 - Fixed internal error due to a forgotten game before focus command.
 - Fixed internal error LetEqual terms should have a variable in the left-hand side
+- Fixed internal error in success simplify
 - Fixed bugs in crypto transformation (in particular, check that variables are
   defined when needed).
 
