--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -63,7 +63,7 @@ papers~\cite{Blanchet06,BlanchetEPrint05,Blanchet06b,BlanchetPointchevalEPrint06
 that can be downloaded at
 
 \centerline{{\tt
-http://prosecco.inria.fr/personal/bblanche/publications/index.html}.}
+https://bblanche.gitlabpages.inria.fr/publications/index.html}.}
 
 The goal of our protocol verifier is to prove security properties
 of protocols in the computational model. The input file describes
@@ -2438,7 +2438,7 @@ The program points can then be specified as follows:
 \item $\texttt{before "}\mathit{regexp}\texttt{"}$ designates the program
   point at the beginning of the line that matches the regular expression
   $\mathit{regexp}$. Regular expressions follow the syntax of regular expressions in the OCaml Str module, see
-  \url{https://caml.inria.fr/pub/docs/manual-ocaml-4.07/libref/Str.html}.
+  \url{https://ocaml.org/releases/4.14/api/Str.html}.
   In regular expressions, blackslash ($\backslash$) must be escaped as $\backslash\backslash$, as in OCaml string literals.
   There must be a single line that matches this
   regular expression, otherwise CryptoVerif shows an error message.
@@ -2523,7 +2523,7 @@ its definition is removed. When $x_i$ is used only in \texttt{defined}
 tests after transformation, its definition is replaced with 
 a constant. The variables $x_i$ may also be regular expressions, 
 following the syntax of regular expressions in the OCaml Str module, see
-  \url{https://caml.inria.fr/pub/docs/manual-ocaml-4.07/libref/Str.html}.
+  \url{https://ocaml.org/releases/4.14/api/Str.html}.
 In this case, they designate all variables that match the regular expression.
 This is particularly helpful to designate all variables that come
 from the same initial name but have different numbers:
