Fix problems related to the fact that terms may abort
Merge of branch 2022.16.fix_abort_bugs

- More precise information extracted from terms when they execute event_abort
- Replace the branch of find with yield or a constant when the condition may abort
in a counted trace, do not remove the branch
- Do not fix the index i of find when we know that i = M upon success, but
the condition may abort in a counted trace
- Fixed simplification of && and || in the presence of abortion
- Minor extension of simplification of find in find conditions or branches
- More sharing of code for simplification of find in find conditions or branches

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ Version
 
 - Allow proving [unique] after some game transformations.
 - As a consequence, removed setting allowUnprovedUnique.
+- Fixed bugs related to the fact that terms may abort.
 - Fixed bug: events were not preserved in the initial transformation of
   the RHS in equivalence proofs.
 
